--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/emcc-avic?characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://bjdsm.top:3306/emcc-avic-test?characterEncoding=UTF-8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=Songge2@
 #jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://114.67.23.103:3306/emcc-tx?characterEncoding=UTF-8
 #jdbc.username=root
